<resources>
    <string name="app_name">TimeSync EduAlert</string>
    <string name="tip2">left until the next class</string>
    <string name="tip1">There are still</string>
    <string name="schedule_title">Schedule</string>
    <string name="plus">+</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="setting_tip1">Please enter a class the schedule</string>
    <string name="enter">enter</string>
    <string name="enter_class_name">Please enter your class name</string>
    <string name="enter_class_period">Please enter you class period(1-10)</string>
    <string name="enter_class_weekday">Please enter the weekday of class(1-5)</string>
    <string name="enter_class_room">Please enter you class room</string>
    <string name="tip3">Next class</string>
    <string name="timesync_edualert_setting">Setting</string>
    <string name="minutes_setting">minutes</string>
    <string name="seconds_setting">seconds</string>
    <string name="switch_of_reminder">Switch of Reminder</string>
    <string name="switch_of_reminder_subtitle">switch of reminder</string>
    <string name="no_class_string">N/A</string>
    <string name="submit_settings">submit</string>
    <string name="valid_name">Please enter a valid name</string>
    <string name="name_length">Please enter a name with 1 to 20 characters</string>
    <string name="valid_period">Please enter a valid period</string>
    <string name="valid_weekday">Please enter a valid weekday</string>
    <string name="valid_classroom">Please enter a valid classroom</string>
    <string name="success_add">Course added</string>
    <string name="back">Back</string>
    <string name="free_period">Free Period</string>
    <string name="homepage_title">Homepage</string>
    <string name="schedule_setting_minus">-</string>
    <string name="work_in_progress">WORK IN PROGRESS</string>
    <string name="work_in_progress_title">Work in progress</string>
</resources>