<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/schedule_title_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@color/color_primary"
            android:textColor="@android:color/white"
    />

    <TextView
            android:id="@+id/enter_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_tip1"
            android:layout_marginTop="150dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@color/white"
            android:textColor="@android:color/black"
    />

    <EditText
            android:id="@+id/class_name_enter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="230dp"
            android:hint="@string/enter_class_name"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="text"
    />

    <EditText
            android:id="@+id/class_period_enter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="290dp"
            android:hint="@string/enter_class_period"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="number"
    />

    <EditText
            android:id="@+id/class_weekday_enter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="350dp"
            android:hint="@string/enter_class_weekday"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="number"
    />

    <EditText
            android:id="@+id/class_classroom_enter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="410dp"
            android:hint="@string/enter_class_room"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="number"
    />

    <Button
            android:id="@+id/schedule_edit_enter_button"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="550dp"
            android:background="@color/color_primary"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="25sp"
    />

    <Button
            android:id="@+id/schedule_edit_back_button"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:background="@color/color_primary"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="15sp"
    />


</RelativeLayout>